--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "earthquake-agent-telex",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/mastra/index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch dist/index.js",
+    "start": "node dist/mastra/index.js",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "dev": "ts-node src/mastra/index.ts"
   },
   "keywords": [],
   "author": "",
